k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smurf-frontend
  namespace: smurf-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smurf-frontend
  template:
    metadata:
      labels:
        app: smurf-frontend
    spec:
      containers:
      - name: smurf-frontend-nginx
        image: dutchg/smurf-frontend:latest
        ports:
        - containerPort: 80
      nodeSelector: # <--- NEW SECTION
        node-type: frontend-node # <--- Schedule this pod on a node labeled frontend-node
