k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smurf-fastapi-service
spec:
  type: NodePort
  selector:
    app: smurf-fastapi
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30007
